--- a/nmtp-front/assets/css/components/layouts.css
+++ b/nmtp-front/assets/css/components/layouts.css
@@ -32,3 +32,10 @@
   display: flex;
   flex-direction: column;
 }
+
+.vertical-container-center{
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+  align-items: center;
+}
