Обновлены стили страницы пользователя и формы изменения данных в соответствии с дизайном. Иконки профиля, главной страницы, рейтинга и входа изменены на svg

--- a/nmtp-front/assets/css/variables.css
+++ b/nmtp-front/assets/css/variables.css
@@ -15,6 +15,7 @@
   --gray-40: rgba(163, 171, 186, 0.4);
   --red: rgba(220, 53, 69, 1);
   --charcoal-grey: rgba(28, 28, 31, 1);
+  --charcoal-grey-80: rgba(28, 28, 31, 0.8);
   --charcoal-grey-50: rgba(28, 28, 31, 0.5);
   --red-30: rgba(220, 53, 69, 0.3);
   --green-30: rgba(40, 167, 69, 0.3);
