--- a/nmtp-front/assets/css/components/auth.css
+++ b/nmtp-front/assets/css/components/auth.css
@@ -22,29 +22,11 @@
   border-bottom: 2px solid var(--cyan);
 }
 
-.auth-form {
+.form {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1.25rem;
-}
-
-.auth-button {
-  padding: 0.5rem;
-  width: 100%;
-  font-size: 1.125rem;
-  font-weight: 500;
-  color: var(--charcoal-grey);
-  background-color: var(--cyan);
-  cursor: pointer;
-  border: 2px solid var(--cyan);
-  border-radius: 0.625rem;
-  transition: all 0.3s ease;
-}
-
-.auth-button:hover {
-  background-color: var(--cyan-80);
-  border-color: var(--charcoal-grey);
 }
 
 .auth-links {
