--- a/nmtp-front/assets/css/components/forms.css
+++ b/nmtp-front/assets/css/components/forms.css
@@ -1,3 +1,10 @@
+.form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+}
+
 .form-group {
   display: flex;
   flex-direction: column;
@@ -44,4 +51,22 @@
   color: var(--red);
   font-size: 0.75rem;
   margin-top: 0.5rem;
+}
+
+.form-button {
+  padding: 0.5rem;
+  width: 100%;
+  font-size: 1.125rem;
+  font-weight: 500;
+  color: var(--charcoal-grey);
+  background-color: var(--cyan);
+  cursor: pointer;
+  border: 2px solid var(--cyan);
+  border-radius: 0.625rem;
+  transition: all 0.3s ease;
+}
+
+.form-button:hover {
+  background-color: var(--cyan-80);
+  border-color: var(--charcoal-grey);
 }
