--- a/nmtp-front/assets/css/components/layouts.css
+++ b/nmtp-front/assets/css/components/layouts.css
@@ -39,3 +39,11 @@
   gap: 1.25rem;
   align-items: center;
 }
+
+.main-bg {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--charcoal-grey);
+}
