--- a/nmtp-front/assets/css/components/rating.css
+++ b/nmtp-front/assets/css/components/rating.css
@@ -15,11 +15,12 @@
   display: flex;
   gap: 0.75rem;
   margin-top: 2.5rem;
+  align-items: center;
 }
 
 .trophy-icon {
-  width: 36px;
-  height: 36px;
+  width: 24px;
+  height: 24px;
   color: var(--cyan);
 }
 
