--- a/nmtp-front/assets/css/main.css
+++ b/nmtp-front/assets/css/main.css
@@ -6,3 +6,6 @@
 @import 'components/navbar.css';
 @import 'components/index.css';
 @import 'components/rating.css';
+@import 'components/userSummary.css';
+@import 'components/userHistory.css';
+@import 'components/userEdit.css';
