Добавлено описание игр на главной странице

--- a/nmtp-front/assets/css/main.css
+++ b/nmtp-front/assets/css/main.css
@@ -8,4 +8,4 @@
 @import 'components/rating.css';
 @import 'components/userSummary.css';
 @import 'components/userHistory.css';
-@import 'components/userEdit.css';
+@import 'components/modal.css';
