--- a/nmtp-front/assets/css/components/index.css
+++ b/nmtp-front/assets/css/components/index.css
@@ -43,7 +43,6 @@
   flex-direction: column;
   align-items: center;
   gap: 2rem;
-  cursor: pointer;
   width: 100%;
 }
 
@@ -69,4 +68,42 @@
 
 .game-title:hover {
   color: var(--cyan-80);
+}
+
+.game-buttons {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  gap: 1rem;
+  align-items: center;
+}
+
+.play-btn, .info-btn {
+  border-radius: 0.625rem;
+  font-weight: 600;
+  cursor: pointer;
+  font-size: 1.25rem;
+  width: 8.75rem;
+  height: 2.875rem;
+}
+
+.play-btn {
+  background: #10C5E1;
+  color: #1C1C1F;
+}
+
+.play-btn:hover {
+  transform: scale(0.98);
+  filter: brightness(0.7);  
+}
+
+.info-btn {
+  background: #A3ABBA;
+  color: #1C1C1F;
+}
+
+.info-btn:hover {
+  transform: scale(0.98);
+  filter: brightness(0.7); 
 }
