--- a/nmtp-front/assets/css/main.css
+++ b/nmtp-front/assets/css/main.css
@@ -9,3 +9,6 @@
 @import 'components/userSummary.css';
 @import 'components/userHistory.css';
 @import 'components/modal.css';
+@import 'components/game.css';
+@import 'components/rocket.css';
+@import 'components/sweeper.css';
