Обновлены стили игры Крути барабан. В играх переименованы некоторые стили

--- a/nmtp-front/assets/css/main.css
+++ b/nmtp-front/assets/css/main.css
@@ -12,3 +12,4 @@
 @import 'components/game.css';
 @import 'components/rocket.css';
 @import 'components/sweeper.css';
+@import 'components/wheel.css';
