--- a/nmtp-front/assets/css/components/game.css
+++ b/nmtp-front/assets/css/components/game.css
@@ -17,6 +17,23 @@
   width: 100%;
   height: 100%;
 }
+.game-container{
+  flex: 0.6;
+  align-items: center;
+}
+.game-wrapper {
+  background: var(--dark-blue);
+  border: 2px solid var(--cyan);
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  padding: 2rem;
+  opacity: 1;
+  position: relative; 
+  width: fit-content; 
+  margin: 0 auto;
+}
 
 /* Game bet */
 .bet-table {
@@ -32,6 +49,7 @@
   font-weight: 400;
   padding: 1rem 0.5rem;
   gap: 0.5rem;
+  user-select: none;
 }
 .table-row {
   display: flex;
@@ -82,7 +100,7 @@
   -webkit-appearance: none;
   margin: 0;
 }
-.game-button {
+.game-btn {
   flex: 1;
   padding: 10px 0;
   border: 1px solid var(--cyan);
@@ -97,40 +115,40 @@
   align-items: center; 
   gap: 0.5rem;
 }
-.game-button:hover {
+.game-btn:hover {
   background: var(--cyan-40);
   border-color: var(--charcoal-grey);
 }
-.game-button--secondary {
+.game-btn--secondary {
     border-color: var(--gray);
     background: var(--gray);
 }
-.game-button--secondary:hover {
+.game-btn--secondary:hover {
   background: var(--gray-40);
 }
-.game-button--won {
+.game-btn--won {
   background-color: var(--green-30);
   border: 2px solid var(--green);
   color: var(--green);
   font-weight: bold;
   cursor:auto;
 }
-.game-button--won:hover{
+.game-btn--won:hover{
     background-color: var(--green-30);
     border-color: var(--green);
 }
-.game-button--lost {
+.game-btn--lost {
   background-color: var(--red-30);
   border: 2px solid var(--red);
   color: var(--red);
   font-weight: bold;
   cursor:auto;
 }
-.game-button--lost:hover{
+.game-btn--lost:hover{
     background-color: var(--red-30);
     border-color: var(--red);
 }
-.game-button--undefined{
+.game-btn--undefined{
   visibility: hidden;
 }
 .result-btn {
@@ -173,7 +191,7 @@
   border-radius: 1rem;
   border: 2px solid var(--cyan);
   flex-shrink: 0; 
-  transition: background-color 0.3s;
+  transition: all 0.3s;
   padding: 0.2rem 0.2rem;
 }
 
@@ -181,6 +199,7 @@
   position: absolute; 
   top: 50%;
   transform: translateY(-50%); 
+  left: 0.2rem;
   width: 1.125rem;
   height: 1.125rem;
   background-color: var(--dark-blue);
