--- a/nmtp-front/assets/css/components/sweeper.css
+++ b/nmtp-front/assets/css/components/sweeper.css
@@ -1,20 +1,3 @@
-.sweeper-container{
-  flex: 0.6;
-  align-items: center;
-}
-.sweeper-wrapper {
-  background: var(--dark-blue);
-  border: 2px solid var(--cyan);
-  border-radius: 16px;
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-  padding: 2rem;
-  opacity: 1;
-  position: relative; 
-  width: fit-content; 
-  margin: 0 auto;
-}
 .overlay-sweeper {
   position: absolute;
   left: 0; top: 0;
@@ -29,14 +12,14 @@
   font-weight: 900;
   color: var(--cyan);
 }
-.cells-row {
+.sweeper-cells-row {
   display: flex;
   flex-direction: row;
   gap: 0.5rem;
   padding: 0;
   width: 100%;
 }
-.cell {
+.sweeper-cell {
   width: 11vmin;
   max-width: 5rem;
   min-width: 2.5rem;
@@ -48,7 +31,7 @@
   justify-content: center;
   align-items: center; 
 }
-.cell:not(.openedGood):not(.openedBad):hover {
+.sweeper-cell:not(.openedGood):not(.openedBad):hover {
   background: var(--cyan);
 }
 .openedGood {
