--- a/nmtp-front/assets/css/components/index.css
+++ b/nmtp-front/assets/css/components/index.css
@@ -53,9 +53,16 @@
   border: 0.125rem solid var(--cyan);
   border-radius: 1rem;
   transition: all 0.3s ease;
+  position: relative;
+  overflow: hidden;
 }
 
-.game-block:hover .game-card {
+.game-image {
+  width: 100%;
+  height: 100%;
+}
+
+.game-card:hover {
   background-color: var(--black);
 }
 
@@ -73,10 +80,15 @@
 .game-buttons {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 55%;
+  width: 50%;
   justify-content: center;
   gap: 1rem;
   align-items: center;
+  position: absolute; 
+  top: 50%; 
+  left: 50%; 
+  transform: translate(-50%, -50%);
 }
 
 .play-btn, .info-btn {
@@ -84,26 +96,27 @@
   font-weight: 600;
   cursor: pointer;
   font-size: 1.25rem;
-  width: 8.75rem;
-  height: 2.875rem;
+  width: 100%;
+  height: 100%;
+  color: var(--charcoal-grey);
 }
 
 .play-btn {
-  background: #10C5E1;
-  color: #1C1C1F;
+  background: var(--cyan);
+  border: 2px solid var(--cyan);
 }
 
 .play-btn:hover {
-  transform: scale(0.98);
-  filter: brightness(0.7);  
+  background: var(--cyan-40);
+  border: 2px solid var(--charcoal-grey); 
 }
 
 .info-btn {
-  background: #A3ABBA;
-  color: #1C1C1F;
+  background: var(--gray);
+  border: 2px solid var(--gray);
 }
 
 .info-btn:hover {
-  transform: scale(0.98);
-  filter: brightness(0.7); 
+  background: var(--gray-40);
+  border: 2px solid var(--charcoal-grey); 
 }
