Добавлен переход на главную страницу при нажатии на логотип в навбаре. Изменено выделение текущего пользователя в таблице рейтинга

--- a/nmtp-front/assets/css/components/rating.css
+++ b/nmtp-front/assets/css/components/rating.css
@@ -87,7 +87,8 @@
 }
 
 .current-user {
-  background: var(--cyan-10);
+  background: var(--cyan-40);
+  color: var(--charcoal-grey);
   font-weight: bold;
 }
 
